[gd_scene load_steps=13 format=3 uid="uid://bsphtr4kd76lx"]

[ext_resource type="StyleBox" path="res://styles/PanelStyleTransparent.tres" id="1"]
[ext_resource type="Script" path="res://menus/HBHovereableButton.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://r6cc2m204dqw" path="res://menus/HBConfirmationWindow.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://bg1cmxm05pmwc" path="res://graphics/icons/icon_add.svg" id="4"]
[ext_resource type="Script" path="res://tools/latency_tester/LatencyTester.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://uxl3thfwaw25" path="res://graphics/icons/icon_substract.svg" id="7"]
[ext_resource type="PackedScene" path="res://rythm_game/game_modes/heartbeat/EmbeddedRhythmGameHeartbeat.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://fy47n0empoft" path="res://graphics/icons/undo-variant-small.svg" id="9"]
[ext_resource type="FontFile" uid="uid://bg63fnrfyg0x3" path="res://fonts/Roboto-Regular.ttf" id="9_b72jn"]
[ext_resource type="PackedScene" uid="uid://dc1uyttoq1v6c" path="res://menus/PromptButton.tscn" id="11"]
[ext_resource type="Theme" uid="uid://b4yu237ua3sml" path="res://Theme_Game_Min.tres" id="12"]

[sub_resource type="StyleBoxEmpty" id="3"]

[node name="HBMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-23.25, -146.25)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("12")
script = ExtResource("6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = -2.0
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = -32

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="InputGlyphRect2" type="InputGlyphRect" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
action_text = ""
action_name = &"gui_cancel"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
icon = ExtResource("9")
script = ExtResource("2")

[node name="ChangeTestButton" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("11")]
custom_minimum_size = Vector2(360, 48)
layout_mode = 2
button_text = "Active test"
action = "practice_set_waypoint"

[node name="EmbeddedRhythmGame" parent="MarginContainer/VBoxContainer" instance=ExtResource("8")]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme_override_constants/margin_top = -32
theme_override_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="InputGlyphRect2" type="InputGlyphRect" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
action_text = ""
action_name = &"gui_left"

[node name="SubstractButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("7")
script = ExtResource("2")

[node name="OffsetLabel" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("9_b72jn")
theme_override_styles/read_only = SubResource("3")
text = " +0 ms"
editable = false
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.5

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("4")
script = ExtResource("2")

[node name="InputGlyphRect3" type="InputGlyphRect" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
action_text = ""
action_name = &"gui_right"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ApplyButton" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("11")]
custom_minimum_size = Vector2(270, 48)
layout_mode = 2
button_text = "Apply"
action = "gui_accept"

[node name="ResetButton" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("11")]
custom_minimum_size = Vector2(384, 48)
layout_mode = 2
button_text = "Reset offset"
action = "practice_go_to_waypoint"

[node name="TutorialButton" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("11")]
custom_minimum_size = Vector2(304, 48)
layout_mode = 2
button_text = "Tutorial"
action = "contextual_option"

[node name="TutorialPopup" parent="." instance=ExtResource("3")]
process_mode = 3
size = Vector2i(650, 212)
theme = null
has_cancel = false
text = "(NT)asdas"
accept_text = "Okay"
cancel_text = ""

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer2/ChangeTestButton" to="." method="_on_ChangeTestButton_pressed"]
[connection signal="update_stats" from="MarginContainer/VBoxContainer/EmbeddedRhythmGame" to="." method="_on_stats_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/SubstractButton" to="." method="_on_SubstractButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="popup_hide" from="TutorialPopup" to="." method="_on_TutorialPopup_hide"]
